<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    >
    <TextView
        android:text="@string/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"/>
    <Switch
        android:id="@+id/switchbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:textOn="@string/on"
        android:textOff="@string/off"/>
    <TextView
        android:id="@+id/text1"
        android:visibility="invisible"
        android:text="@string/choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/Group1">
        <RadioButton
            android:id="@+id/jelly"
            android:text="@string/radiobtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/kitkat"
            android:text="@string/radiobtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/lollipop"
            android:text="@string/radiobtn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <ImageView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:id="@+id/image1"
        android:visibility="invisible"
        />
    <Button
        android:id="@+id/exit"
        android:text="@string/finishbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/reset"
        android:text="@string/clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>